We are still facing this issue! Alignment is not correct "Signed By Esignature Server

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -861,3 +861,12 @@ table.display td.time {
 #audit-trail-wrapper .main .row {
     margin-bottom: 30px !important;
 }
+
+.dfc-image img {
+    vertical-align: bottom !important; 
+}
+
+.row>*{
+padding-right: 0px !important; 
+padding-left: 0px !important; 
+}
